Added server side verification, and update to 15.1.0

--- a/Sources/Resources/Templates/SwiftyAds.plist
+++ b/Sources/Resources/Templates/SwiftyAds.plist
@@ -6,6 +6,8 @@
 	<string>Some id</string>
 	<key>interstitialAdUnitId</key>
 	<string>Some id</string>
+	<key>interstitialVideoAdUnitId</key>
+	<string>Some id</string>
 	<key>rewardedAdUnitId</key>
 	<string>Some id</string>
 	<key>rewardedInterstitialAdUnitId</key>
